Clean up build files
* build_on_gadi.sh: Deleted
* build.sh: Detect if the script is run on gadi.
            Delete old build directory before the new build.
            General cleanup.
* CMakeLists.txt: Remove option FIND_NETCDF. Use exisiting option PLATFORM.
                  Print host FQDN and the number of CPU cores.
* README.md: s/build_on_gadi.sh/build.sh/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,11 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release")
 endif()
 
+cmake_host_system_information(RESULT my_fqdn QUERY FQDN)
+message("---- Detected FQDN: " ${my_fqdn})
+cmake_host_system_information(RESULT my_ncores QUERY NUMBER_OF_LOGICAL_CORES)
+message("---- Detected NUMBER_OF_LOGICAL_CORES: " ${my_ncores})
+
 if (MPIFORT_EXE STREQUAL "MPIFORT_EXE-NOTFOUND")
   message("mpifort not found, searching for MPI libraries" )
   find_package(MPI)
@@ -31,13 +36,14 @@ else()
   endif()
 endif()
 
-option(FIND_NETCDF "Use FindNetCDF to generate NetCDF configuration" ON)
-if(${FIND_NETCDF})
+if(PLATFORM MATCHES "nci")
+  message("---- Do not find_package NetCDF to generate NetCDF configuration")
+  set(NETCDF_LIBRARIES netcdff)
+else()
+  message("---- Do find_package NetCDF to generate NetCDF configuration")
   set (NETCDF_F90 "YES")
   find_package(NetCDF REQUIRED)
   include_directories(${NETCDF_F90_INCLUDE_DIRS})
-else()
-  set(NETCDF_LIBRARIES netcdff)
 endif()
 
 # compiler flags for gfortran
