--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,17 +86,17 @@ add_dependencies(jsonfortran json-fortran)
 set_property(TARGET jsonfortran PROPERTY IMPORTED_LOCATION ${BINARY_DIR}/lib/libjsonfortran.a)
 
 # oasis external project
-# json-fortran external project
 ExternalProject_Add(oasis3-mct
     DOWNLOAD_COMMAND ""
     SOURCE_DIR ${CMAKE_SOURCE_DIR}/oasis3-mct
     CONFIGURE_COMMAND ""
     BUILD_IN_SOURCE 1
-    BUILD_COMMAND make VERBOSE=1 ${PLATFORM}
-    INSTALL_COMMAND cmake -E echo "Skipping json-fortran install step."
+    BUILD_COMMAND ./build.sh
+    INSTALL_COMMAND cmake -E echo "Skipping oasis3-mct install step."
 )
 ExternalProject_Get_property(oasis3-mct BINARY_DIR)
-include_directories(${BINARY_DIR}/Linux/build/lib/psmile.MPI1/)
+set(OASIS3_COMPILE_DIR ${BINARY_DIR}/compile_oa3-mct)
+include_directories(${OASIS3_COMPILE_DIR}/build/lib/psmile.MPI1/)
 add_library(mct STATIC IMPORTED)
 add_library(mpeu STATIC IMPORTED)
 add_library(psmile.MPI1 STATIC IMPORTED)
@@ -105,10 +105,10 @@ add_dependencies(mct oasis3-mct)
 add_dependencies(mpeu oasis3-mct)
 add_dependencies(psmile.MPI1 oasis3-mct)
 add_dependencies(scrip oasis3-mct)
-set_property(TARGET mct PROPERTY IMPORTED_LOCATION ${BINARY_DIR}/Linux/lib/libmct.a)
-set_property(TARGET mpeu PROPERTY IMPORTED_LOCATION ${BINARY_DIR}/Linux/lib/libmpeu.a)
-set_property(TARGET psmile.MPI1 PROPERTY IMPORTED_LOCATION ${BINARY_DIR}/Linux/lib/libpsmile.MPI1.a)
-set_property(TARGET scrip PROPERTY IMPORTED_LOCATION ${BINARY_DIR}/Linux/lib/libscrip.a)
+set_property(TARGET mct PROPERTY IMPORTED_LOCATION ${OASIS3_COMPILE_DIR}/lib/libmct.a)
+set_property(TARGET mpeu PROPERTY IMPORTED_LOCATION ${OASIS3_COMPILE_DIR}/lib/libmpeu.a)
+set_property(TARGET psmile.MPI1 PROPERTY IMPORTED_LOCATION ${OASIS3_COMPILE_DIR}/lib/libpsmile.MPI1.a)
+set_property(TARGET scrip PROPERTY IMPORTED_LOCATION ${OASIS3_COMPILE_DIR}/lib/libscrip.a)
 
 # Get the current working branch
 execute_process(
@@ -117,6 +117,8 @@ execute_process(
   OUTPUT_VARIABLE GIT_URL
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
+add_definitions("-DGIT_URL='${GIT_URL}'")
+message("---- GIT_URL: " ${GIT_URL})
 
 # Get the latest abbreviated commit hash of the working branch
 execute_process(
@@ -125,9 +127,8 @@ execute_process(
   OUTPUT_VARIABLE GIT_COMMIT_HASH
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
-
 add_definitions("-DGIT_COMMIT_HASH='${GIT_COMMIT_HASH}'")
-add_definitions("-DGIT_URL='${GIT_URL}'")
+message("---- GIT_COMMIT_HASH: " ${GIT_COMMIT_HASH})
 
 # libutil.a library
 file(GLOB LIB_SOURCES libutil/src/*.F90)
