--- a/libaccessom2.pc.in
+++ b/libaccessom2.pc.in
@@ -6,5 +6,6 @@ includedir="${prefix}/include"
 Name: libaccessom2
 Description: @CMAKE_PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
+Requires.private: datetime
 Cflags: -I"${includedir}"
 Libs: -L"${libdir}" -laccessom2
